docs/apache-airflow/2.2.5/_sources/_api/airflow/models/taskinstance/index.rst.txt
:py:mod:`airflow.models.taskinstance`
=====================================

.. py:module:: airflow.models.taskinstance


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.models.taskinstance.TaskInstanceKey
   airflow.models.taskinstance.TaskInstance
   airflow.models.taskinstance.SimpleTaskInstance



Functions
~~~~~~~~~

.. autoapisummary::

   airflow.models.taskinstance.set_current_context
   airflow.models.taskinstance.load_error_file
   airflow.models.taskinstance.set_error_file
   airflow.models.taskinstance.clear_task_instances



Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.models.taskinstance.ApiClient
   airflow.models.taskinstance.TR
   airflow.models.taskinstance.log
   airflow.models.taskinstance.TaskInstanceStateType
   airflow.models.taskinstance.queued_by_job


.. py:data:: ApiClient
   

   

.. py:data:: TR
   

   

.. py:data:: log
   

   

.. py:function:: set_current_context(context: airflow.utils.context.Context) -> None

   Sets the current execution context to the provided context object.
   This method should be called once per Task execution, before calling operator.execute.


.. py:function:: load_error_file(fd: IO[bytes]) -> Optional[Union[str, Exception]]

   Load and return error from error file


.. py:function:: set_error_file(error_file: str, error: Union[str, Exception]) -> None

   Write error into error file by path


.. py:function:: clear_task_instances(tis, session, activate_dag_runs=None, dag=None, dag_run_state: Union[airflow.utils.state.DagRunState, airflow.typing_compat.Literal[False]] = DagRunState.QUEUED)

   Clears a set of task instances, but makes sure the running ones
   get killed.

   :param tis: a list of task instances
   :param session: current session
   :param dag_run_state: state to set DagRun to. If set to False, dagrun state will not
       be changed.
   :param dag: DAG object
   :param activate_dag_runs: Deprecated parameter, do not pass


.. py:class:: TaskInstanceKey

   Bases: :py:obj:`NamedTuple`

   Key used to identify task instance.

   .. py:attribute:: dag_id
      :annotation: :str

      

   .. py:attribute:: task_id
      :annotation: :str

      

   .. py:attribute:: run_id
      :annotation: :str

      

   .. py:attribute:: try_number
      :annotation: :int = 1

      

   .. py:method:: primary(self) -> Tuple[str, str, str]
      :property:

      Return task instance primary key part of the key


   .. py:method:: reduced(self) -> TaskInstanceKey
      :property:

      Remake the key by subtracting 1 from try number to match in memory information


   .. py:method:: with_try_number(self, try_number: int) -> TaskInstanceKey

      Returns TaskInstanceKey with provided ``try_number``


   .. py:method:: key(self) -> TaskInstanceKey
      :property:

      For API-compatibly with TaskInstance.

      Returns self



.. py:class:: TaskInstance(task, execution_date: Optional[datetime.datetime] = None, run_id: str = None, state: Optional[str] = None)

   Bases: :py:obj:`airflow.models.base.Base`, :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`

   Task instances store the state of a task instance. This table is the
   authority and single source of truth around what tasks have run and the
   state they are in.

   The SqlAlchemy model doesn't have a SqlAlchemy foreign key to the task or
   dag model deliberately to have more control over transactions.

   Database transactions on this table should insure double triggers and
   any confusion around what task instances are or aren't ready to run
   even while multiple schedulers may be firing task instances.

   .. py:attribute:: __tablename__
      :annotation: = task_instance

      

   .. py:attribute:: task_id
      

      

   .. py:attribute:: dag_id
      

      

   .. py:attribute:: run_id
      

      

   .. py:attribute:: start_date
      

      

   .. py:attribute:: end_date
      

      

   .. py:attribute:: duration
      

      

   .. py:attribute:: state
      

      

   .. py:attribute:: max_tries
      

      

   .. py:attribute:: hostname
      

      

   .. py:attribute:: unixname
      

      

   .. py:attribute:: job_id
      

      

   .. py:attribute:: pool
      

      

   .. py:attribute:: pool_slots
      

      

   .. py:attribute:: queue
      

      

   .. py:attribute:: priority_weight
      

      

   .. py:attribute:: operator
      

      

   .. py:attribute:: queued_dttm
      

      

   .. py:attribute:: queued_by_job_id
      

      

   .. py:attribute:: pid
      

      

   .. py:attribute:: executor_config
      

      

   .. py:attribute:: external_executor_id
      

      

   .. py:attribute:: trigger_id
      

      

   .. py:attribute:: trigger_timeout
      

      

   .. py:attribute:: next_method
      

      

   .. py:attribute:: next_kwargs
      

      

   .. py:attribute:: __table_args__
      

      

   .. py:attribute:: dag_model
      

      

   .. py:attribute:: trigger
      

      

   .. py:attribute:: dag_run
      

      

   .. py:attribute:: execution_date
      

      

   .. py:method:: init_on_load(self)

      Initialize the attributes that aren't stored in the DB


   .. py:method:: try_number(self)
      :property:

      Return the try number that this task number will be when it is actually
      run.

      If the TaskInstance is currently running, this will match the column in the
      database, in all other cases this will be incremented.


   .. py:method:: prev_attempted_tries(self)
      :property:

      Based on this instance's try_number, this will calculate
      the number of previously attempted tries, defaulting to 0.


   .. py:method:: next_try_number(self)
      :property:

      Setting Next Try Number


   .. py:method:: command_as_list(self, mark_success=False, ignore_all_deps=False, ignore_task_deps=False, ignore_depends_on_past=False, ignore_ti_state=False, local=False, pickle_id=None, raw=False, job_id=None, pool=None, cfg_path=None)

      Returns a command that can be executed anywhere where airflow is
      installed. This command is part of the message sent to executors by
      the orchestrator.


   .. py:method:: generate_command(dag_id: str, task_id: str, run_id: str = None, mark_success: bool = False, ignore_all_deps: bool = False, ignore_depends_on_past: bool = False, ignore_task_deps: bool = False, ignore_ti_state: bool = False, local: bool = False, pickle_id: Optional[int] = None, file_path: Optional[str] = None, raw: bool = False, job_id: Optional[str] = None, pool: Optional[str] = None, cfg_path: Optional[str] = None) -> List[str]
      :staticmethod:

      Generates the shell command required to execute this task instance.

      :param dag_id: DAG ID
      :type dag_id: str
      :param task_id: Task ID
      :type task_id: str
      :param run_id: The run_id of this task's DagRun
      :type run_id: datetime
      :param mark_success: Whether to mark the task as successful
      :type mark_success: bool
      :param ignore_all_deps: Ignore all ignorable dependencies.
          Overrides the other ignore_* parameters.
      :type ignore_all_deps: bool
      :param ignore_depends_on_past: Ignore depends_on_past parameter of DAGs
          (e.g. for Backfills)
      :type ignore_depends_on_past: bool
      :param ignore_task_deps: Ignore task-specific dependencies such as depends_on_past
          and trigger rule
      :type ignore_task_deps: bool
      :param ignore_ti_state: Ignore the task instance's previous failure/success
      :type ignore_ti_state: bool
      :param local: Whether to run the task locally
      :type local: bool
      :param pickle_id: If the DAG was serialized to the DB, the ID
          associated with the pickled DAG
      :type pickle_id: Optional[int]
      :param file_path: path to the file containing the DAG definition
      :type file_path: Optional[str]
      :param raw: raw mode (needs more details)
      :type raw: Optional[bool]
      :param job_id: job ID (needs more details)
      :type job_id: Optional[int]
      :param pool: the Airflow pool that the task should run in
      :type pool: Optional[str]
      :param cfg_path: the Path to the configuration file
      :type cfg_path: Optional[str]
      :return: shell command that can be used to run the task instance
      :rtype: list[str]


   .. py:method:: log_url(self)
      :property:

      Log URL for TaskInstance


   .. py:method:: mark_success_url(self)
      :property:

      URL to mark TI success


   .. py:method:: current_state(self, session=None) -> str

      Get the very latest state from the database, if a session is passed,
      we use and looking up the state becomes part of the session, otherwise
      a new session is used.

      :param session: SQLAlchemy ORM Session
      :type session: Session


   .. py:method:: error(self, session=None)

      Forces the task instance's state to FAILED in the database.

      :param session: SQLAlchemy ORM Session
      :type session: Session


   .. py:method:: refresh_from_db(self, session=None, lock_for_update=False) -> None

      Refreshes the task instance from the database based on the primary key

      :param session: SQLAlchemy ORM Session
      :type session: Session
      :param lock_for_update: if True, indicates that the database should
          lock the TaskInstance (issuing a FOR UPDATE clause) until the
          session is committed.
      :type lock_for_update: bool


   .. py:method:: refresh_from_task(self, task, pool_override=None)

      Copy common attributes from the given task.

      :param task: The task object to copy from
      :type task: airflow.models.BaseOperator
      :param pool_override: Use the pool_override instead of task's pool
      :type pool_override: str


   .. py:method:: clear_xcom_data(self, session=None)

      Clears all XCom data from the database for the task instance

      :param session: SQLAlchemy ORM Session
      :type session: Session


   .. py:method:: key(self) -> TaskInstanceKey
      :property:

      Returns a tuple that identifies the task instance uniquely


   .. py:method:: set_state(self, state: str, session=None)

      Set TaskInstance state.

      :param state: State to set for the TI
      :type state: str
      :param session: SQLAlchemy ORM Session
      :type session: Session


   .. py:method:: is_premature(self)
      :property:

      Returns whether a task is in UP_FOR_RETRY state and its retry interval
      has elapsed.


   .. py:method:: are_dependents_done(self, session=None)

      Checks whether the immediate dependents of this task instance have succeeded or have been skipped.
      This is meant to be used by wait_for_downstream.

      This is useful when you do not want to start processing the next
      schedule of a task until the dependents are done. For instance,
      if the task DROPs and recreates a table.

      :param session: SQLAlchemy ORM Session
      :type session: Session


   .. py:method:: get_previous_dagrun(self, state: Optional[str] = None, session: Optional[sqlalchemy.orm.session.Session] = None) -> Optional[airflow.models.dag.DagRun]

      The DagRun that ran before this task instance's DagRun.

      :param state: If passed, it only take into account instances of a specific state.
      :param session: SQLAlchemy ORM Session.


   .. py:method:: get_previous_ti(self, state: Optional[str] = None, session: sqlalchemy.orm.session.Session = None) -> Optional[TaskInstance]

      The task instance for the task that ran before this task instance.

      :param state: If passed, it only take into account instances of a specific state.
      :param session: SQLAlchemy ORM Session


   .. py:method:: previous_ti(self)
      :property:

      This attribute is deprecated.
      Please use `airflow.models.taskinstance.TaskInstance.get_previous_ti` method.


   .. py:method:: previous_ti_success(self) -> Optional[TaskInstance]
      :property:

      This attribute is deprecated.
      Please use `airflow.models.taskinstance.TaskInstance.get_previous_ti` method.


   .. py:method:: get_previous_execution_date(self, state: Optional[str] = None, session: sqlalchemy.orm.session.Session = None) -> Optional[pendulum.DateTime]

      The execution date from property previous_ti_success.

      :param state: If passed, it only take into account instances of a specific state.
      :param session: SQLAlchemy ORM Session


   .. py:method:: get_previous_start_date(self, state: Optional[str] = None, session: sqlalchemy.orm.session.Session = None) -> Optional[pendulum.DateTime]

      The start date from property previous_ti_success.

      :param state: If passed, it only take into account instances of a specific state.
      :param session: SQLAlchemy ORM Session


   .. py:method:: previous_start_date_success(self) -> Optional[pendulum.DateTime]
      :property:

      This attribute is deprecated.
      Please use `airflow.models.taskinstance.TaskInstance.get_previous_start_date` method.


   .. py:method:: are_dependencies_met(self, dep_context=None, session=None, verbose=False)

      Returns whether or not all the conditions are met for this task instance to be run
      given the context for the dependencies (e.g. a task instance being force run from
      the UI will ignore some dependencies).

      :param dep_context: The execution context that determines the dependencies that
          should be evaluated.
      :type dep_context: DepContext
      :param session: database session
      :type session: sqlalchemy.orm.session.Session
      :param verbose: whether log details on failed dependencies on
          info or debug log level
      :type verbose: bool


   .. py:method:: get_failed_dep_statuses(self, dep_context=None, session=None)

      Get failed Dependencies


   .. py:method:: __repr__(self)

      Return repr(self).


   .. py:method:: next_retry_datetime(self)

      Get datetime of the next retry if the task instance fails. For exponential
      backoff, retry_delay is used as base and will be converted to seconds.


   .. py:method:: ready_for_retry(self)

      Checks on whether the task instance is in the right state and timeframe
      to be retried.


   .. py:method:: get_dagrun(self, session: sqlalchemy.orm.session.Session = None)

      Returns the DagRun for this TaskInstance

      :param session: SQLAlchemy ORM Session
      :return: DagRun


   .. py:method:: check_and_change_state_before_execution(self, verbose: bool = True, ignore_all_deps: bool = False, ignore_depends_on_past: bool = False, ignore_task_deps: bool = False, ignore_ti_state: bool = False, mark_success: bool = False, test_mode: bool = False, job_id: Optional[str] = None, pool: Optional[str] = None, external_executor_id: Optional[str] = None, session=None) -> bool

      Checks dependencies and then sets state to RUNNING if they are met. Returns
      True if and only if state is set to RUNNING, which implies that task should be
      executed, in preparation for _run_raw_task

      :param verbose: whether to turn on more verbose logging
      :type verbose: bool
      :param ignore_all_deps: Ignore all of the non-critical dependencies, just runs
      :type ignore_all_deps: bool
      :param ignore_depends_on_past: Ignore depends_on_past DAG attribute
      :type ignore_depends_on_past: bool
      :param ignore_task_deps: Don't check the dependencies of this TaskInstance's task
      :type ignore_task_deps: bool
      :param ignore_ti_state: Disregards previous task instance state
      :type ignore_ti_state: bool
      :param mark_success: Don't run the task, mark its state as success
      :type mark_success: bool
      :param test_mode: Doesn't record success or failure in the DB
      :type test_mode: bool
      :param job_id: Job (BackfillJob / LocalTaskJob / SchedulerJob) ID
      :type job_id: str
      :param pool: specifies the pool to use to run the task instance
      :type pool: str
      :param external_executor_id: The identifier of the celery executor
      :type external_executor_id: str
      :param session: SQLAlchemy ORM Session
      :type session: Session
      :return: whether the state was changed to running or not
      :rtype: bool


   .. py:method:: clear_next_method_args(self)


   .. py:method:: run(self, verbose: bool = True, ignore_all_deps: bool = False, ignore_depends_on_past: bool = False, ignore_task_deps: bool = False, ignore_ti_state: bool = False, mark_success: bool = False, test_mode: bool = False, job_id: Optional[str] = None, pool: Optional[str] = None, session=None) -> None

      Run TaskInstance


   .. py:method:: dry_run(self)

      Only Renders Templates for the TI


   .. py:method:: get_truncated_error_traceback(self, error: BaseException) -> Optional[types.TracebackType]

      Returns truncated error traceback.

      This method returns traceback of the error truncated to the
      frame saved by earlier try/except along the way. If the frame
      is found, the traceback will be truncated to below the frame.

      :param error: exception to get traceback from
      :return: traceback to print


   .. py:method:: handle_failure(self, error: Union[str, Exception], test_mode: Optional[bool] = None, force_fail: bool = False, error_file: Optional[str] = None, session=None) -> None

      Handle Failure for the TaskInstance


   .. py:method:: handle_failure_with_callback(self, error: Union[str, Exception], test_mode: Optional[bool] = None, force_fail: bool = False, session=None) -> None


   .. py:method:: is_eligible_to_retry(self)

      Is task instance is eligible for retry


   .. py:method:: get_template_context(self, session: sqlalchemy.orm.session.Session = None, ignore_param_exceptions: bool = True) -> airflow.utils.context.Context

      Return TI Context


   .. py:method:: get_rendered_template_fields(self, session=None)

      Fetch rendered template fields from DB


   .. py:method:: get_rendered_k8s_spec(self, session=None)

      Fetch rendered template fields from DB


   .. py:method:: overwrite_params_with_dag_run_conf(self, params, dag_run)

      Overwrite Task Params with DagRun.conf


   .. py:method:: render_templates(self, context: Optional[airflow.utils.context.Context] = None) -> None

      Render templates in the operator fields.


   .. py:method:: render_k8s_pod_yaml(self) -> Optional[dict]

      Render k8s pod yaml


   .. py:method:: get_email_subject_content(self, exception: BaseException) -> Tuple[str, str, str]

      Get the email subject content for exceptions.


   .. py:method:: email_alert(self, exception)

      Send alert email with exception information.


   .. py:method:: set_duration(self) -> None

      Set TI duration


   .. py:method:: xcom_push(self, key: str, value: Any, execution_date: Optional[datetime.datetime] = None, session: sqlalchemy.orm.session.Session = None) -> None

      Make an XCom available for tasks to pull.

      :param key: A key for the XCom
      :type key: str
      :param value: A value for the XCom. The value is pickled and stored
          in the database.
      :type value: any picklable object
      :param execution_date: if provided, the XCom will not be visible until
          this date. This can be used, for example, to send a message to a
          task on a future date without it being immediately visible.
      :type execution_date: datetime
      :param session: Sqlalchemy ORM Session
      :type session: Session


   .. py:method:: xcom_pull(self, task_ids: Optional[Union[str, Iterable[str]]] = None, dag_id: Optional[str] = None, key: str = XCOM_RETURN_KEY, include_prior_dates: bool = False, session: sqlalchemy.orm.session.Session = None) -> Any

      Pull XComs that optionally meet certain criteria.

      The default value for `key` limits the search to XComs
      that were returned by other tasks (as opposed to those that were pushed
      manually). To remove this filter, pass key=None (or any desired value).

      If a single task_id string is provided, the result is the value of the
      most recent matching XCom from that task_id. If multiple task_ids are
      provided, a tuple of matching values is returned. None is returned
      whenever no matches are found.

      :param key: A key for the XCom. If provided, only XComs with matching
          keys will be returned. The default key is 'return_value', also
          available as a constant XCOM_RETURN_KEY. This key is automatically
          given to XComs returned by tasks (as opposed to being pushed
          manually). To remove the filter, pass key=None.
      :type key: str
      :param task_ids: Only XComs from tasks with matching ids will be
          pulled. Can pass None to remove the filter.
      :type task_ids: str or iterable of strings (representing task_ids)
      :param dag_id: If provided, only pulls XComs from this DAG.
          If None (default), the DAG of the calling task is used.
      :type dag_id: str
      :param include_prior_dates: If False, only XComs from the current
          execution_date are returned. If True, XComs from previous dates
          are returned as well.
      :type include_prior_dates: bool
      :param session: Sqlalchemy ORM Session
      :type session: Session


   .. py:method:: get_num_running_task_instances(self, session)

      Return Number of running TIs from the DB


   .. py:method:: init_run_context(self, raw=False)

      Sets the log context.


   .. py:method:: filter_for_tis(tis: Iterable[Union[TaskInstance, TaskInstanceKey]]) -> Optional[sqlalchemy.sql.elements.BooleanClauseList]
      :staticmethod:

      Returns SQLAlchemy filter to query selected task instances



.. py:data:: TaskInstanceStateType
   

   

.. py:class:: SimpleTaskInstance(ti: TaskInstance)

   Simplified Task Instance.

   Used to send data between processes via Queues.

   .. py:method:: dag_id(self) -> str
      :property:


   .. py:method:: task_id(self) -> str
      :property:


   .. py:method:: run_id(self) -> str
      :property:


   .. py:method:: start_date(self) -> datetime.datetime
      :property:


   .. py:method:: end_date(self) -> datetime.datetime
      :property:


   .. py:method:: try_number(self) -> int
      :property:


   .. py:method:: state(self) -> str
      :property:


   .. py:method:: pool(self) -> str
      :property:


   .. py:method:: priority_weight(self) -> Optional[int]
      :property:


   .. py:method:: queue(self) -> str
      :property:


   .. py:method:: key(self) -> TaskInstanceKey
      :property:


   .. py:method:: executor_config(self)
      :property:



.. py:data:: queued_by_job
   

   

